--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,21 @@
 server:
   port: 8081
+  servlet:
+    context-path: /
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
 
 spring:
   application:
     name: "oauth2"
+
+
+  datasource:
+    url: ${LOCAL_DB_URL}
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
 
   security:
     oauth2:
@@ -16,6 +28,9 @@ spring:
           google:
             client-id: "384814260447-6mcor02lje7qaf7k8i8tri6jn5n1tgt6.apps.googleusercontent.com"
             client-secret: "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"
+            scope:
+              - profile
+              - email
 
           kakao:
             client-id: ${KAKAO_OAUTH_CLIENT_ID} # 96d45143d67b5449cb81a098cc354c6d
@@ -24,6 +39,26 @@ spring:
             redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
             client-authentication-method: POST
 
+          naver:
+            client-id: ${NAVER_OAUTH_CLIENT_ID}
+            client-secret: ${NAVER_OAUTH_CLIENT_SECRET}
+            scope:
+              - name
+              - email
+              - profile_image
+            client-name: Naver # 클라이언트 네임은 구글 페이스북도 대문자로 시작하더라.
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8081/login/oauth2/code/naver
+
+#
+#          naver:
+#            client-id: ${NAVER_OAUTH_CLIENT_ID}
+#            client-secret: ${NAVER_OAUTH_CLIENT_SECRET}
+#            scope: name,email,profile_image
+#            client-name: Naver
+#            authorization-grant-type: authorization_code
+#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+
 
         provider:
             kakao:
@@ -31,4 +66,21 @@ spring:
               token-uri: https://kauth.kakao.com/oauth/token
               user-info-uri: https://kapi.kakao.com/v2/user/me
               user-name-attribute: id
+              userNameAttribute: id
+
+            naver:
+              authorization-uri: https://nid.naver.com/oauth2.0/authorize
+              token-uri: https://nid.naver.com/oauth2.0/token
+              user-info-uri: https://openapi.naver.com/v1/nid/me
+              user-name-attribute: response # 회원정보를 json의 response 키값으로 리턴해줌.
+#
+#            naver:
+#              authorization-uri: https://nid.naver.com/oauth2.0/authorize
+#              token-uri: https://nid.naver.com/oauth2.0/token
+#              user-info-uri: https://openapi.naver.com/v1/nid/me
+#              user-name-attribute: response
+#              userNameAttribute: response
+#              #response > id # 회원정보를 json의 response 키값으로 리턴해줌.
+#
+
 
