--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,35 +29,33 @@ spring:
             client-id: "384814260447-6mcor02lje7qaf7k8i8tri6jn5n1tgt6.apps.googleusercontent.com"
             client-secret: "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"
             scope:
-              - profile
               - email
+              - profile
 
           kakao:
             client-id: ${KAKAO_OAUTH_CLIENT_ID} # 96d45143d67b5449cb81a098cc354c6d
             client-secret: ${KAKAO_OAUTH_CLIENT_SECRET} # W41QQl3dORFdBSNUyR46No2boTwPWiZn
+            client-name: Kakao
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             authorization-grant-type: authorization_code
-            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
+            scope:
+              - nickname
+              - email
+              - profile_image
             client-authentication-method: POST
 
           naver:
             client-id: ${NAVER_OAUTH_CLIENT_ID}
             client-secret: ${NAVER_OAUTH_CLIENT_SECRET}
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
             scope:
               - name
               - email
               - profile_image
-            client-name: Naver # 클라이언트 네임은 구글 페이스북도 대문자로 시작하더라.
-            authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8081/login/oauth2/code/naver
 
 #
-#          naver:
-#            client-id: ${NAVER_OAUTH_CLIENT_ID}
-#            client-secret: ${NAVER_OAUTH_CLIENT_SECRET}
-#            scope: name,email,profile_image
-#            client-name: Naver
-#            authorization-grant-type: authorization_code
-#            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
 
 
         provider:
@@ -66,21 +64,10 @@ spring:
               token-uri: https://kauth.kakao.com/oauth/token
               user-info-uri: https://kapi.kakao.com/v2/user/me
               user-name-attribute: id
-              userNameAttribute: id
 
             naver:
               authorization-uri: https://nid.naver.com/oauth2.0/authorize
               token-uri: https://nid.naver.com/oauth2.0/token
               user-info-uri: https://openapi.naver.com/v1/nid/me
-              user-name-attribute: response # 회원정보를 json의 response 키값으로 리턴해줌.
-#
-#            naver:
-#              authorization-uri: https://nid.naver.com/oauth2.0/authorize
-#              token-uri: https://nid.naver.com/oauth2.0/token
-#              user-info-uri: https://openapi.naver.com/v1/nid/me
-#              user-name-attribute: response
-#              userNameAttribute: response
-#              #response > id # 회원정보를 json의 response 키값으로 리턴해줌.
-#
-
+              user-name-attribute: response # naver의 경우 회원 정보를 response에서 리턴하기 때문에 한 번 더 map 서치를 해주어야 한다.
 
